# North

./: .gitignore  IdrisElm.ipkg  LICENSE  make.sh  pack.toml  run.sh  runNoBuild.sh
gtk4ffilib/: Cargo.toml
gtk4ffilib/src/: debug.rs  lib.rs
gtk4ffilib/src/gtk/: app.rs  mod.rs  window.rs
gtk4ffilib/src/gtk/widget/: box_widget.rs  button.rs  label.rs  mod.rs
gtk4ffilib/src/statics/: cell.rs  counter.rs  event_queue.rs  initial_window_renders.rs  mod.rs  widget_map.rs
src/: Application.idr  Channel.idr  Data.idr  Foreign.idr  IdrisElm.idr  InApplicationNode.idr  Main.idr  MutableCell.idr  RenderVirtual.idr  Store.idr  UnboundedChannelAlias.idr  Window.idr  demo.idr
src/ApplicationNode/: ApplicationNode.idr
src/Commands/: Async.idr  Delay.idr  None.idr
src/Examples/: Counter.idr  DelayedButton.idr  Hello.idr  Timer.idr
src/Subscriptions/: None.idr
test/: test.ipkg
