[package]
name = "gtk4ffilib"
version = "0.1.0"
edition = "2021"

[lib]
name = "gtk4ffilib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
gio = "0.21.2"
glib = "0.21.3"
gtk4 = "0.10.1"
once_cell = "1.21.3"
